src/test/deca/context/invalid/resultats/test_modulo_class-cont.res
./src/test/deca/context/invalid/test_modulo_class.deca:23:5: Modulo operator must be applied to two expression of int type (right expression's type : A, left expression's type : A).
